--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit==1.6.0
-plotly==5.3.1
-pandas==1.3.3
-numpy==1.21.2
+streamlit==1.38.0
+plotly==5.9.0
+pandas==1.5.3
+numpy==1.26.1
+Pillow==9.2.0
